# be-task-ca

./: README.md  docker-compose.yml  pyproject.toml  scripts.py
be_task_ca/: app.py  database.py
be_task_ca/core/: __init__.py  container.py  dependencies.py  interfaces.py
be_task_ca/infrastructure/memory/: repositories.py
be_task_ca/infrastructure/sql/: repositories.py  schema.py
be_task_ca/item/: api.py  model.py  schema.py  usecases.py
be_task_ca/user/: api.py  model.py  usecases.py
postman/: be-task-ca.postman_collection.json  be-task-ca.postman_environment.json
tests/: conftest.py  test_integration.py  test_item_service.py  test_user_service.py
